# SurrealRocket

./: Cargo.toml  Database.toml  Readme.md
src/: conn_config.rs  database.rs  main.rs  people.rs
